--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-#git+https://github.com/Pycord-Development/pycord.git This needs to be installed
+git+https://github.com/Pycord-Development/pycord.git
 motor~=2.3.0
